# opencv-stubs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  cspell.config.yaml  pyproject.toml
.github/config/: opencv-stubs.dict
.github/workflows/: pre-commit.yaml  publish.yaml
requirements/: requirements-build.txt  requirements-dev.txt  requirements.txt
src/cv2-stubs/: __init__.pyi  classes.pyi  constants.pyi  functions.pyi
src/cv2-stubs/modules/: __init__.py  __init__.pyi  aruco.pyi  bioinspired.pyi  colored_kinfu.pyi  core.pyi  cuda.pyi  detail.pyi  dnn.pyi  dpm.pyi  face.pyi  fisheye.pyi  ft.pyi  img_hash.pyi  intensity_transform.pyi  large_kinfu.pyi  line_descriptor.pyi  linemod.pyi  mcc.pyi  ml.pyi  motempl.pyi  omnidir.pyi  optflow.pyi  phase_unwrapping.pyi  plot.pyi  ppf_match_3d.pyi  quality.pyi  rgbd.pyi  saliency.pyi  structured_light.pyi  text.pyi  xfeatures2d.pyi  xphoto.pyi
src/cv2-stubs/modules/gapi/: __init__.pyi  ie.pyi
src/cv2-stubs/modules/gapi/streaming/: __init__.pyi
src/cv2-stubs/modules/gapi/wip/: __init__.pyi  draw.pyi
src/cv2-stubs/modules/kinfu/: __init__.pyi
src/cv2-stubs/modules/utils/: __init__.pyi
src/cv2-stubs/modules/ximgproc/: __init__.pyi  segmentation.pyi
utils/: add_missing_overloads.py  generate_constants.py  generate_modules.py  merge_with_microsoft_stubs.py  processing_utils.py  undefined_to_any.py
