[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "opencv-stubs"
authors = [{ name = "Bagard Hoel" }]
description = "Unofficial stubs for the opencv-python package."
keywords = ["OpenCV", "stubs"]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["numpy>=1.21", "opencv-python>=4.10.0.84"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/hoel-bagard/opencv-stubs"
"Bug Tracker" = "https://github.com/hoel-bagard/opencv-stubs/issues"

[project.optional-dependencies]
dev = ["pre-commit", "pip-tools", "ruff", "pyright"]
build = ["hatch"]
flake8 = [
  "flake8",
  "flake8-bugbear",
  "flake8-comprehensions",
  "flake8-docstrings",
  "flake8-builtins",
  "flake8-quotes",
  "pep8-naming",
  "flake8-import-order",
  "flake8-noqa",
  "flake8-broken-line",
  "flake8-commas",
  "Flake8-pyproject",
]
# I couldn't figure out how to have "opencv or opencv-headless" as dependency, so they are both optional.
opencv = ["opencv-python>=4.7.0"]
opencv-contrib = ["opencv-contrib-python>=4.7.0"]
opencv-headless = ["opencv-python-headless>=4.7.0"]

[tool.hatch.version]
path = "src/cv2-stubs/__init__.pyi"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/.pytest_cache", "/build", "/dist", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/cv2-stubs"]

[tool.hatch.envs.pypi.scripts]
# hatch run pypi:publish_test
publish_test = "hatch build --clean && hatch publish -r test"
publish = "hatch build --clean && hatch publish"

[tool.uv]
managed = true
link-mode = "copy"

[tool.uv.pip]
universal = true

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "I",
  "Q",
  "UP",
  "S",
  "BLE",
  "COM",
  "DTZ",
  "PIE",
  "PT",
  "RSE",
  "SIM",
  "PTH",
  "TRY",
  "NPY",
  "RUF",
  # "ANN",
]
ignore = [
  "D1",
  "D401",
  "D204",
  "D203",
  "D213",
  "S101",
  "PLR2004",
  # Class `ClassifierCallback` inherits from `object`
  "UP004",
  "E501",
  # The following rule may cause conflicts when used with the formatter
  "COM812",
]
unfixable = ["UP004"]

[tool.ruff.lint.isort]
order-by-type = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.pyright]
include = ["src/cv2-stubs"]
venvPath = "."
venv = ".venv"

strictListInference = true
strictDictionaryInference = true
strictSetInference = true

reportMissingModuleSource = false
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportUntypedNamedTuple = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportMissingSuperCall = false
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = false
reportGeneralTypeIssues = false
reportOverlappingOverload = false
reportIncompatibleMethodOverride = false
# reportMissingParameterType = "warning"
# reportMissingTypeArgument = "warning"
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportUnusedExpression = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMatchNotExhaustive = "warning"
reportInvalidStringEscapeSequence = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[dependency-groups]
dev = [
  "flake8>=5.0.4",
  "flake8-broken-line>=0.6.0",
  "flake8-bugbear>=23.3.12",
  "flake8-builtins>=2.1.0",
  "flake8-commas>=2.1.0",
  "flake8-comprehensions>=3.13.0",
  "flake8-docstrings>=1.7.0",
  "flake8-import-order>=0.18.2",
  "flake8-noqa>=1.4.0",
  "flake8-pyproject>=1.2.3",
  "flake8-quotes>=3.4.0",
  "hatch>=1.7.0",
  "mypy>=1.4.1",
  "opencv-python>=4.10.0.84",
  "pep8-naming>=0.14.0",
  "pip-tools>=6.14.0",
  "pre-commit>=2.21.0",
  "pylint>=2.13.9",
  "pyright[nodejs]>=1.1.391",
  "ruff>=0.9.0",
]

[tool.pylint]
disable = [
  "invalid-name",
  "missing-class-docstring",
  "too-many-lines",
  "missing-module-docstring",
]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
ignore_errors = false
disable_error_code = ["overload-cannot-match", "misc", "override"]
